# planning-update

./: .cursorrules  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  PLUGIN-GUIDE.md  PLUGIN.md  README.md  cache.py  config.py  constants.py  docker-compose.yml  email_sender.py  example_config.toml  features.json  html_render.py  location_lookup.py  main.py  models.py  oxford_planning_client.py  package.json  parser.py  planning_update.toml  pnpm-lock.yaml  pyproject.toml  query.py  report_service.py  scraper.py  test_config.py
.agents/skills/api-endpoint/: SKILL.md
.agents/skills/check/: SKILL.md
.agents/skills/clean-slop/: SKILL.md
.agents/skills/commit-push/: SKILL.md
.agents/skills/db-migration/: SKILL.md
.agents/skills/docs/: SKILL.md
.agents/skills/format/: SKILL.md
.agents/skills/fullstack-feature/: SKILL.md
.agents/skills/new-package/: SKILL.md
.agents/skills/new-skill/: SKILL.md
.agents/skills/redis-job/: SKILL.md
.agents/skills/status/: SKILL.md
.agents/skills/sync-configs/: SKILL.md
.agents/skills/temporal-workflow/: SKILL.md
.claude/: settings.json
.claude/agents/: api-designer.md  architect.md  code-reviewer.md  docs-generator.md  edge-case-auditor.md  implementor.md  pattern-enforcer.md  performance-analyzer.md  refactoring-expert.md  requirements-analyst.md  security-auditor.md  tech-stack-researcher.md  ux-critic.md
.claude/commands/: check.md  clean-slop.md  commit-push.md  docs.md  format.md
.claude/hooks/: pre-commit-check.sh
.claude/rules/: backend.md  database.md  env-vars.md  frontend.md  testing.md
.claude/skills/api-endpoint/: SKILL.md
.claude/skills/db-migration/: SKILL.md
.claude/skills/fullstack-feature/: SKILL.md
.codex/: config.toml
.codex/agents/: api-designer.toml  architect.toml  code-reviewer.toml  docs-generator.toml  edge-case-auditor.toml  implementor.toml  pattern-enforcer.toml  performance-analyzer.toml  refactoring-expert.toml  requirements-analyst.toml  security-auditor.toml  tech-stack-researcher.toml  ux-critic.toml
.codex/rules/: safety.rules
.github/workflows/: _neon.yml  cleanup.yml  deploy.yml  send-planning-update.yml  unit-tests.yml  validation.yml
data/boundaries/: oxford_city_county_divisions.geojson  oxford_city_county_divisions.metadata.json  oxford_city_parishes.geojson  oxford_city_parishes.metadata.json  oxford_city_wards.geojson  oxford_city_wards.metadata.json
data/code_point_postcodes/: README.md
docs/: TODO.md  TODOS-v2-done.md  architecture-proposal-response.md  implementation-plan.md  phase-2-migration-todos.md
environment/: .env.backend.example  .env.frontend.example
planning_update/: __init__.py  cli.py  config.py  constants.py  models.py
planning_update/integrations/: email_sender.py
planning_update/lookup/: location_lookup.py  postcode_lookup.py  ward_mappings.json
planning_update/parsing/: parser.py
planning_update/renderers/: html_render.py
planning_update/services/: cache.py  committee.py  oxford_planning_client.py  report_service.py  scraper.py
scripts/: check-config-sync.sh  claude-headless.sh  cleanup-worker-redis.sh  dev.sh  features.sh  fetch_oxford_county_divisions.py  fetch_oxford_parishes.py  fetch_oxford_wards.py  generate_erd.py  run_all_configs.sh  setup-env.sh  sync-terraform-state.sh  webhook-tunnel.sh
scripts/setup-wizard/: index.html  server.js  wizard.js
services/backend/: CLAUDE.md  Dockerfile  Dockerfile.dev  docker-entrypoint.sh
services/backend/app/: PATTERNS.md  main.py  pyproject.toml
services/backend/app/config/: prompts.py
services/backend/app/core/: __init__.py  config.py  constants.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  logging.py  openapi.py  redis.py
services/backend/app/middleware/: logging.py
services/backend/app/routers/: agent.py  buckets.py  dev_auth.py  features.py  files.py  health.py  jobs.py  llm.py  planning.py  realtime_agent.py  users.py  webhooks.py  workflows.py
services/backend/app/schemas/: __init__.py  agent.py  base.py  buckets.py  common.py  files.py  health.py  llm.py  planning.py  users.py  webhooks.py  workflows.py
services/backend/app/services/: agent_service.py  bucket_service.py  clerk_service.py  file_service.py  job_queue.py  job_repository.py  job_service.py  planning_service.py  realtime_agent_service.py  storage_service.py  temporal_service.py  user_service.py
services/backend/app/services/agent_tools/: tools.py
services/backend/app/services/llm/: __init__.py
services/backend/app/services/storage/: __init__.py  base.py  constants.py  factory.py  gcp_storage.py
services/backend/app/tests/: conftest.py
services/backend/app/tests/fixtures/: storage_mocks.py
services/backend/app/tests/integration/: __init__.py
services/backend/app/tests/unit/: __init__.py  test_schemas.py  test_utils.py
services/backend/app/tests/unit/services/: test_bucket_service.py  test_file_service.py  test_planning_service.py  test_storage_service.py  test_user_service.py
services/backend/app/utils/: __init__.py  router_helpers.py
services/frontend/: CLAUDE.md  Dockerfile  Dockerfile.dev  docker-entrypoint.sh  nginx.conf
services/worker/: CLAUDE.md  Dockerfile  Dockerfile.dev  docker-entrypoint.sh
services/worker/app/: __init__.py  main.py  processor.py  pyproject.toml
services/worker/app/core/: __init__.py  config.py  redis.py
services/worker/app/handlers/: __init__.py
services/worker/app/services/: __init__.py  job_queue.py  job_repository.py
services/worker/app/services/llm/: __init__.py
services/worker/app/temporal/: __init__.py  worker.py
tests/: conftest.py  test_cli.py  test_config.py  test_email_sender.py  test_html_render.py  test_location_lookup.py  test_main.py  test_models.py  test_parser.py  test_postcode_lookup.py  test_report_service.py  test_scraper.py
tests/integrations/: test_email_sender.py
tests/parsing/: test_parser.py
tests/renderers/: test_html_render.py
tests/services/: test_committee.py  test_oxford_planning_client.py  test_report_service.py  test_scraper.py
(+158 files in other folders)
