[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oxford-planning-update"
version = "0.1.0"
description = "Fetch Oxford planning applications of interest from the weekly validated list."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0,<3.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "pydantic>=2.0.0,<3.0.0",
]

[project.scripts]
oxford-weekly = "oxford_weekly_applications:main"

[tool.setuptools]
py-modules = ["oxford_weekly_applications"]

[tool.ruff.lint]
select = ["I", "D"]

[tool.ruff.lint.isort]
known-first-party = ["oxford_weekly_applications"]

[tool.ruff.lint.pydocstyle]
convention = "google"
