[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oxford-planning-update"
version = "0.1.0"
description = "Fetch Oxford planning applications of interest from the weekly validated list."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0,<3.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "pytest>=8.0.0,<9.0.0",
  "rapidfuzz>=3.0.0,<4.0.0",
]

[project.scripts]
oxford-weekly = "main:main"

[tool.setuptools]
py-modules = ["constants", "location_lookup", "main", "models", "parser", "scraper"]

[tool.setuptools.data-files]
"" = ["ward_mappings.json"]

[tool.ruff.lint]
select = ["I", "D"]

[tool.ruff.lint.isort]
known-first-party = ["oxford_weekly_applications"]

[tool.ruff.lint.pydocstyle]
convention = "google"
