[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oxford-planning-update"
version = "0.1.0"
description = "Fetch Oxford planning applications of interest from the weekly validated list."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0,<3.0.0",
  "backoff>=2.2.1,<3.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "typer>=0.12.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
  "rapidfuzz>=3.0.0,<4.0.0",
]

[project.scripts]
oxford-weekly = "planning_update.cli:main"

[tool.setuptools]
packages = [
  "planning_update",
  "planning_update.integrations",
  "planning_update.lookup",
  "planning_update.parsing",
  "planning_update.renderers",
  "planning_update.services",
]

[tool.setuptools.package-data]
"planning_update.lookup" = ["ward_mappings.json"]

[tool.ruff.lint]
select = ["I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
